--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ tiny-imagenet-200/
 __pycache__/
 triplet.csv 
 embedding.txt                                                                                                                              
+deepranknet.model
+Icon?
+
+
