트리플렛 검사기 GUI 방식으로 구현

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,6 @@ triplet.csv
 embedding.txt                                                                                                                              
 deeprank.pt
 Icon?
+sample.jpeg
 
 
