triplet checker csv path 인자 추가

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 tiny-imagenet-200/
 patent_image/
 __pycache__/
-triplet.csv 
+design_triplet.csv
 embedding.txt                                                                                                                              
 deeprank.pt
 Icon?
